kubernetes2/rewrite/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-backend
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gateway-infra
      sectionName: https
  rules:
    - backendRefs:
        - name: store-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gateway-infra
      sectionName: https
  rules:
    - matches:
        - path:
            value: /v1
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v2
            statusCode: 302
    - matches:
        - path:
            value: /v1-test
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: test-domain
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /v1
      backendRefs:
        - name: store-v1
          weight: 1
          port: 8080
    - matches:
        - path:
            value: /v2
      backendRefs:
        - name: store-v2
          port: 8080
    - matches:
        - path:
            value: /de
      backendRefs:
        - name: store-german
          port: 8080
